# tscp-anchor

./: .Cargo.toml.swp  .env  .env.example  .gitignore  ARCHIVE_BRANCHES.md  ARCHIVE_INDEX.md  BUILD.md  BUILD_CONTRACT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  FINAL_VERIFICATION_LOG_v1.0-rc1.md  LAST_SEAL_PATH  LICENSE  RE-SIGN.md  README.md  RELEASE_MANIFEST_v1.0-rc1.md  REPOSITORY_CUSTODY_TRANSITION.md  SHA256SUMS  TSCP_AIR_Kernel_Corrected.lean  TSCP_ANCHOR_ARCHIVE_BRANCHES.md  TSCP_ANCHOR_CUSTODY_RECEIPT.md  TSCP_ARTIFACT_COMMIT.txt  TSCP_ARTIFACT_RECORD.txt  TraceCoreProver.lean  V0.6.2_VALIDATION_STATUS.md  VERIFY.md  anchor-agent.mjs  anchor-batch.mjs  anchor-sepolia.mjs  audit-manifest.json  audit.toml  baseline_fri_profile.json  build.sh  build_log.txt  check-balance.mjs  check-code.mjs  compile-solc.mjs  deploy-anchor.mjs  (+22 more)
.github/workflows/: anchor-ratified.yml  anchor.yml  ci.yml  stage2-verify.yml  verify-receipts.yml  wasm-smoke.yml
.lake/config/0/: lakefile.olean.trace
TraceCoreProver/: Kernel.lean
anchor-receipts/: 2026-04-27T04-51-05-301Z-anchor.json  2026-04-27T06-02-18-972Z-anchor.json  2026-04-27T08-10-13-934Z-anchor.json  2026-04-27T08-33-52-506Z-sepolia-anchor.json  2026-04-27T08-35-15-781Z-sepolia-anchor.json  2026-04-27T08-35-26-786Z-sepolia-anchor.json  2026-04-27T08-35-37-857Z-sepolia-anchor.json  2026-04-27T09-44-15-417Z-sepolia-anchor.json  2026-04-27T11-01-50-617Z-sepolia-anchor.json
artifacts/: migration-witness.json
artifacts/contracts/TSCPAnchor.sol/: TSCPAnchor.json
audit-receipts/: 2026-04-27T14-01-29Z-offline-audit.json  2026-04-27T14-02-47Z-offline-audit.json  2026-04-27T14-07-47Z-offline-audit.json  2026-04-27T14-10-37Z-sepolia-audit.json
contracts/: TSCPAnchor.sol  TSCPFriVerifier.sol
corpus/golden-0.6.1/: SHA256SUMS  fibonacci.txt
crates/: upgrade_driver.sh
crates/batch-merkle/: Cargo.toml
crates/batch-merkle/src/: commit.rs  lib.rs
crates/batch-merkle/tests/: batch_merkle_roundtrip.rs  batch_merkle_roundtrip.rs.bak
crates/commitment/src/: lib.rs
crates/oracle-layer/: Cargo.toml  Cargo.toml.bak  p3_challenger_src.txt
crates/oracle-layer/benches/: stark_prove.rs
crates/oracle-layer/crates/oracle-layer/: Cargo.toml
crates/oracle-layer/crates/oracle-layer/src/: lib.rs  oracle.rs
crates/oracle-layer/examples/: fibonacci.rs
crates/oracle-layer/src/: adversarial.rs  api.rs  constraint.rs  constraint_oracle.rs  debugger.rs  fft.rs  folded.rs  fri.rs  fri_protocol.rs  fri_query.rs  lib.rs  merkle.rs  oracle.rs  poly.rs  prover.rs  quotient.rs  sumcheck.rs  telemetry.rs  trace_provider.rs  transcript.rs
crates/oracle-layer/src/constraint/: lww.rs  mod.rs
crates/oracle-layer/tests/: fri_0_6_1_correctness.rs  oracle_lift_end_to_end.rs
crates/prover-server/: Cargo.toml
crates/prover-server/src/: deep_ali.rs  lib.rs  main.rs  owsl_bridge.rs  poly_ir.rs  proof_envelope.rs
crates/prover-server/src/edia/: admission.rs  mod.rs
crates/prover-server/tests/: g2_5_mixed_version.rs  m7_poly_seam.rs
crates/tscp-anchor/: Cargo.toml
crates/tscp-anchor/src/: batch.rs  lib.rs  prover.rs
crates/tscp-anchor/tests/: batch_test.rs  fuzz_chain.rs  wire_kernel.rs
crates/tscp-backends/: Cargo.toml
crates/tscp-backends/evidence/: stage2_verification.json
crates/tscp-backends/src/: avx512.rs  backend.rs  lib.rs  scalar.rs
crates/tscp-cli/: Cargo.toml
crates/tscp-cli/src/: main.rs  verify_adapter.rs
crates/tscp-kernel/: Cargo.toml
crates/tscp-kernel/src/: event.rs  event_algebra.rs  lib.rs  replay.rs  serialization.rs  state.rs  transition.rs  types.rs
crates/tscp-kernel/tests/: determinism.rs  serialization_conformance.rs
crates/tscp-protocol/: Cargo.toml
crates/tscp-protocol/src/: lib.rs  proof_envelope.rs
crates/tscp-protocol/tests/: conformance_tests.rs
crates/tscp-wasm-smoke/: Cargo.toml
crates/tscp-wasm-smoke/src/: main.rs
deploy/: Dockerfile  setup-hetzner.sh  tscp-prover.service
docs/: TSCP-PL-VERIFIER-CONTRACT-FREEZE-LEDGER-V1.md  TSCP_EVENT_ALGEBRA_V1.md  VEP_MILESTONES.md
docs/contracts/: VERIFIER_CONTRACT_V1.md
fixtures/: bad-claim.json  bad-schema.json  pass.json  test.json  unknown-engine.json
migration-backups/plonky3-0.6.2-preflight/: commitment.toml.bak
oracle-layer/src/: api.rs
proof-bundle/keys/: tscp-operator-fingerprint.txt  tscp-operator-public.asc
proof-bundle/v0.1-event-algebra/: commit.txt  files.sha256  tag-record.txt
prover-server/src/: main.rs
release-evidence/tscp-v2.3-sealed/: NOTES.md  cargo-build.txt  cargo-test.txt  commit.txt  git-status.txt  toolchain.txt  version.txt  workspace.json
scripts/: audit-receipts.mjs  build-check.sh  create-audit-manifest.mjs  history-cleanup-tscp-anchor.sh  history-cleanup-tscp-canon.sh  history-scrub-culturalcodex.sh  migration_runner.py  normalize-receipt.mjs  ratify-tscp.mjs  receipt-schema.mjs  scan-ratified.mjs  verify-audit-manifest.mjs  verify-receipt.mjs  verify_artifact.sh
src/: deep_ali.rs  delta_fri_bridge.rs  foxtrot_harness.rs  main.rs  owsl_bridge.rs  owsl_ipc.py
src/verifier/: backend.rs  mod.rs  reason.rs  types.rs  verify.rs
test/: TSCPFriVerifier.test.js
tests/: run_gate.sh
tools/: build-seal-v2.3.sh  build-seal-v2.sh  verify-seal-v2.3.sh  verify-seal-v2.sh
tscp-docs/: data.json  spec.json
tscp-m83/: Cargo.toml
tscp-mini-ntt-parity-v1/: README.md  SHA256SUMS  SIGN_TAG.md  acceptance-evidence.json  constants.json  vector_generator.py  verify.py
tscp-mini-ntt-parity-v1/vectors/: n16.json  n8.json
tscp-serialization-v0.1-verification/: CONTRACT.md  ENVIRONMENT.md  IDENTITY_SEAL.md  README.md  VERIFICATION_RUN.md
tscp-serialization-v0.1-verification/evidence/negative/: 01_invalid_schema_rejection.md  02_non_canonical_rejection.md  03_cross_domain_collision_resistance.md  04_mutation_detection_enforcement.md  05_custody_expression_blocked.md
tscp-serialization-v0.1-verification/evidence/positive/: 01_schema_compliance.md  02_canonical_encoding.md  (+5 more)
tscp-serialization-v0.1-verification/tests/: README.md
tscp/impl/: TSCP-IMPL-ANCHOR-0001.json
