[workspace]
resolver = "2"
members = [
 "crates/tscp-cli","crates/oracle-layer", "crates/batch-merkle", "crates/prover-server", "crates/commitment", "crates/tscp-kernel", "crates/tscp-protocol", "crates/tscp-wasm-smoke", "tscp-m83", "crates/tscp-backends"]

[workspace.dependencies]
p3-field = "0.6.1"
p3-matrix = "0.6.1"
p3-baby-bear = "0.6.1"
p3-monty-31 = "0.6.1"
p3-symmetric = "0.6.1"
p3-merkle-tree = "0.6.1"
p3-poseidon2 = "0.6.1"
p3-commit = "0.6.1"
p3-fri = "0.6.1"
p3-dft = "0.6.1"
p3-challenger = "0.6.1"
p3-util = "0.6.1"
serde_json = "1.0"
shellexpand = "3.0"
lazy_static = "1.4"
tempfile = "3.0"

