[package]
name = "batch-merkle"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-symmetric = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-dft = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
rand = { version = "0.10", features = ["sys_rng"] }
rand_core = { version = "0.9", features = ["os_rng"] }

[dev-dependencies]
p3-monty-31 = { workspace = true }
