[package]
name = "oracle-layer"
version = "0.1.0"
edition = "2021"

[lib]
name = "oracle_layer"
path = "src/lib.rs"

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"

[[bench]]
name = "stark_prove"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
p3-field.workspace = true
p3-matrix.workspace = true
p3-challenger.workspace = true
p3-symmetric.workspace = true
p3-baby-bear.workspace = true
p3-poseidon2.workspace = true
p3-commit.workspace = true
p3-fri.workspace = true
p3-dft.workspace = true
p3-util.workspace = true
itertools = "0.12"
batch-merkle = { path = "../batch-merkle" }

[dev-dependencies]
criterion = "0.5"
