[package]
name = "prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
oracle-layer = { path = "../oracle-layer" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-field = { workspace = true }
