[package]
name = "prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
oracle-layer = { path = "../oracle-layer" }
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-field.workspace = true
p3-poseidon2.workspace = true
bincode = "1.3.2"
