[package]
name = "prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
oracle-layer = { path = "../oracle-layer" }
batch-merkle = { path = "../batch-merkle" }
commitment = { path = "../commitment" }
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-field.workspace = true
p3-poseidon2.workspace = true
p3-dft.workspace = true
p3-fri.workspace = true
p3-commit.workspace = true
bincode = "1.3.2"
thiserror = "2.0.18"
serde_json.workspace = true
lazy_static.workspace = true
shellexpand.workspace = true
p3-matrix.workspace = true
p3-symmetric.workspace = true
p3-merkle-tree.workspace = true

tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile.workspace = true
