[package]
name = "tscp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tscp-kernel = { path = "../tscp-kernel" }
tscp-anchor = { path = "../tscp-anchor" }
clap = { version = "4.6.1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.11.0"
hex = "0.4.3"
serde_cbor = "0.11.2"

[[bin]]
name = "tscp"
path = "src/main.rs"

