[package]
name = "tscp-kernel"
version = "0.1.0"
edition = "2021"
description = "TSCP Transition Kernel v0.1 - Deterministic state-transition machine"
authors = ["TSCP"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
sha2 = "0.10"
blake3 = "1.5"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
