[package]
name = "tscp-wasm-smoke"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "29", default-features = false, features = ["runtime"] }

[features]
default = []
jit = ["wasmtime/cranelift"]

[[bin]]
name = "tscp-wasm-smoke"
path = "src/main.rs"
required-features = ["jit"]
